--- a/platformio.ini
+++ b/platformio.ini
@@ -13,28 +13,25 @@ framework = espidf
 monitor_speed = 115200
 monitor_filters = colorize
 board_build.partitions = larger.csv
-board_build.embed_files =
-    src/pages/favicon.ico
-board_build.embed_txtfiles =
-    src/pages/styles-9ee3c4491d35b3c1d830fa9da31c7861.css
-    src/pages/config.html
-    src/pages/result.html
-    src/pages/apply.html
-    src/pages/scan.html
-    src/pages/reset.html
-    src/pages/unlock.html
-    src/pages/advanced.html
-    src/pages/lock.html
-    src/pages/clients.html
-    src/pages/jquery-8a1045d9cbf50b52a0805c111ba08e94.js
-    src/pages/bootstrap.js
+board_build.embed_files = 
+	src/pages/favicon.ico
+board_build.embed_txtfiles = 
+	src/pages/styles-9ee3c4491d35b3c1d830fa9da31c7861.css
+	src/pages/config.html
+	src/pages/result.html
+	src/pages/apply.html
+	src/pages/scan.html
+	src/pages/reset.html
+	src/pages/unlock.html
+	src/pages/advanced.html
+	src/pages/lock.html
+	src/pages/clients.html
+	src/pages/jquery-8a1045d9cbf50b52a0805c111ba08e94.js
+	src/pages/bootstrap.js
 
-
-
-[env:esp32-c3-devkitm-1]
+[env:esp32-c3]
 platform = espressif32
-board = esp32-c3-devkitm-1
-
+board = dfrobot_beetle_esp32c3
 
 [env:esp32dev]
 platform = espressif32
