--- a/platformio.ini
+++ b/platformio.ini
@@ -31,12 +31,4 @@ board_build.embed_txtfiles =
 
 [env:esp32-c3]
 platform = espressif32
-board = dfrobot_beetle_esp32c3
-
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
-
-[env:featheresp32-s2]
-platform = espressif32
-board = featheresp32-s2
+board = esp32-c3-devkitm-1
