--- a/platformio.ini
+++ b/platformio.ini
@@ -32,3 +32,6 @@ board_build.embed_txtfiles =
 [env:esp32-c3]
 platform = espressif32
 board = esp32-c3-devkitm-1
+
+[env:NodeMCU2s]
+board = nodemcu-32s
