--- a/platformio.ini
+++ b/platformio.ini
@@ -28,9 +28,10 @@ board_build.embed_txtfiles =
 	src/pages/clients.html
 	src/pages/jquery-8a1045d9cbf50b52a0805c111ba08e94.js
 	src/pages/bootstrap.js
+platform = espressif32
 
 [env:esp32-c3]
-platform = espressif32
+platform = 
 board = esp32-c3-devkitm-1
 
 [env:NodeMCU2s]
